# minitorch-rs

./: Cargo.toml  README.md
core/: Cargo.toml
core/src/: backend.rs  lib.rs  loss.rs  nn.rs  op.rs  optim.rs  tensor.rs
minitorch-examples/: Cargo.toml
minitorch-examples/src/: main.rs
