[workspace]

members = ["core", "minitorch-examples"]

# Let's set the resolver to the modern version.
resolver = "2"

[workspace.dependencies]
ndarray = "0.17"  # `ndarray` will be our workhorse for tensor math on the CPU.
rand = "0.9"      # For random weight initialization
dyn-clone = "1.0" # To store Box<dyn MyTrait> or Arc<dyn MyTrait> without knowing concrete types
